src/scss/components/products/extend.scss
.extend {
  max-width: rem(920);
  display: flex;
  gap: rem(28);
  padding: rem(18);
  background-color: #fff;
  box-shadow: 0px 0px 20px 5px rgba(236, 236, 236, 0.75);
  font-family: 'Josefin Sans', serif;
  color: #111C85;
  @media (max-width: $mobile) {
    padding: 0;
    flex-direction: column;
    gap: 0;
  }

  &__img {
    position: relative;
    max-width: rem(284);
    &:hover .icon-zoom {
      opacity: 0.9;
    }
    @media(max-width: $mobile) {
      max-width: 100%;
    }
    img {
      width: 100%;
      cursor: zoom-in;
    }
  }

  &__icon {
    cursor: pointer;
    color: #535399;
  }
  
  & .icon-cart {
    font-size: rem(18);
  }

  & .icon-heart {
    font-size: rem(16);
  }

  & .icon-zoom {
    color: inherit;
    opacity: 0;
    font-size: rem(24);
    cursor: zoom-in;
    position: absolute;
    text-align: center;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: rem(36);
    height: rem(36);
    background: rgba(230, 230, 230, 0.5);
    border-radius: 50%;
    transition: visibility 0s, opacity 0.3s ease;
    &::before {
      line-height: math.div(36, 24);
    }
    @media(max-width: $mobile) {
      opacity: 0.5;
    }
  }


  &__details {
    @media(max-width: $mobile) {
      padding: rem(18);
    }
  }

  &__details-top {
    margin-top: rem(10);
    display: flex;
    align-items: center;
    gap: rem(64);
    @media(max-width: $mobileSmall){
      gap: rem(24);
    }
  }

  &__name {
    font-weight: 700;
    font-size: rem(18);
    line-height: math.div(24, 18);
  }

  &__cost {
    display: inline-block;
    margin-top: rem(12);
    font-size: rem(14);
    line-height: math.div(22, 14);
  }

  &__old-cost {
    text-decoration: line-through;
    font-size: rem(14);
    color: #FF2AAA;
    margin-right: rem(16);
  }

  &__description {
    margin: rem(12) 0;
    font-family: 'Lato', sans-serif;
    color: #9295AA;
    line-height: math.div(28, 16);
    @media(max-width: $mobileSmall){
      font-size: rem(14);
    }
  }

  &__icons {
    margin-top: rem(16);
    display: flex;
    align-items: center;
    gap: rem(30);
  }
}

